# agents_mcp_openai_sdk

./: .gitignore  demo_session_persistence.db  prod_user_001.db  pyproject.toml
MCPs/: basic_mcp.py  task_manager_mcp.py
MCPs/materials/: 01_advanced_mcp.py  02_practical_mcp_example.py  03_production_fastmcp_server.py  MCP_CHEATSHEET.md
Materials/: 01_parallelization_patterns.py  01_streaming_basics.py  02_production_hitl.py  02_streaming_with_tools.py  03_streaming_handoffs.py  CONTEXT_SESSIONS_MEMORY_GUIDE.md  HITL_CHEATSHEET.md  MULTI_AGENT_PRODUCTION_GUIDE.md  PARALLELIZATION_CHEATSHEET.md  PROVIDER_CAPABILITY_MATRIX.md  STREAMING_CHEATSHEET.md  agent_demo.py  agent_gemini_production.py  context_sessions_memory.py  fastmcp-agents-crash-course.md  model_registry.py  multi_agent_comparison.py  multi_agent_handoffs.py  multi_agent_tools.py  my_server.py  production_support_agent.py
openai_agents/: agent_as_tool.py  agent_as_tool_conditions.py  agents_as_tool.py  agents_as_tool_streaming.py  basic_agent.py  context.py  deterministic.py  guardrails.py  handoff_agent.py  hooks.py  human_in_loop.py  multi_agent.py  multi_agent_production.py  parallelization.py  run_on_permission.py  session.py  simple_miltiagent.py  sqlite_context_session.py  streaming.py  streaming_guardrails.py  tool_use_behavior.py
